# cyberos

./: .cuo-slug-mapping.json  .cursorrules  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierrc.json  0_integration (Postgres + Redis).txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FINISH_SKILL_BROKER_CLIPPY_FIX.sh  GEMINI.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SESSION_BOOTSTRAP.md  WAVE-1-2-CONTINUATION.md  app-release.aab  cyberskill.config.json  eslint.config.mjs  lefthook.yml  manifest.json.pre-v1-strip.bak  modules.yaml  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
apps/brain/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/: .gitignore  AppxManifest.xml  Cargo.toml  Entitlements.mas.inherit.plist  Entitlements.mas.plist  Info.plist  tauri.conf.json  tauri.mas.conf.json
cuo/: README.md  pyproject.toml
cuo/cuo/: __init__.py  __main__.py
cuo/cuo/core/: __init__.py  catalog.py  invoker.py  memory_bridge.py  router.py  trace.py
cuo/docs/: AGENTS.md  CHANGELOG.md  README.md  ROUTING.md  SPEC.md
cuo/scripts/: install.sh
cuo/tests/: test_catalog.py  test_invoker.py  test_memory_bridge.py  test_router.py
cuo/tests/fixtures/: routing-cases.json
cuo/tools/: run_fixtures.py
modules/cuo/: CHANGELOG.md  DREAM.md  EXECUTION-DISCIPLINE.md  MODULE.md  README.md  audit-profile.yaml  pyproject.toml
modules/cuo/.awh/: eval-baseline.json  gate.sh  goldenset.yaml
modules/cuo/_template/: HOW_TO_USE.md
modules/cuo/chief-accounting-officer/: README.md
modules/cuo/chief-administrative-officer/: README.md
modules/cuo/chief-ai-officer/: README.md
modules/cuo/chief-architect/: README.md
modules/cuo/chief-automation-officer/: README.md
modules/cuo/chief-brand-officer/: README.md
modules/cuo/chief-commercial-officer/: README.md
modules/cuo/chief-communications-officer/: README.md
modules/cuo/chief-compliance-officer/: README.md
modules/cuo/chief-customer-officer/: README.md
modules/cuo/chief-data-officer/: README.md
modules/cuo/chief-digital-officer/: README.md
modules/cuo/chief-diversity-officer/: README.md
modules/cuo/chief-esg-officer/: README.md
modules/cuo/chief-ethics-officer/: README.md
modules/cuo/chief-executive-officer/: README.md
modules/cuo/chief-experience-officer/: README.md
modules/cuo/chief-financial-officer/: README.md
modules/cuo/chief-growth-officer/: README.md
modules/cuo/chief-happiness-officer/: README.md
modules/cuo/chief-human-resources-officer/: README.md
modules/cuo/chief-information-officer/: README.md
modules/cuo/chief-information-security-officer/: README.md
modules/cuo/chief-innovation-officer/: README.md
modules/cuo/chief-investment-officer/: README.md
modules/cuo/chief-knowledge-officer/: README.md
modules/cuo/chief-learning-officer/: README.md
modules/cuo/chief-legal-officer/: README.md
modules/cuo/chief-marketing-officer/: README.md
modules/cuo/chief-medical-officer/: README.md
modules/cuo/chief-metaverse-officer/: README.md
modules/cuo/chief-of-staff/: README.md
modules/cuo/chief-operating-officer/: README.md
modules/cuo/chief-people-officer/: README.md
modules/cuo/chief-privacy-officer/: README.md
modules/cuo/chief-procurement-officer/: README.md
modules/cuo/chief-product-officer/: README.md
modules/cuo/chief-remote-officer/: README.md
modules/cuo/chief-restructuring-officer/: README.md
modules/cuo/chief-revenue-officer/: README.md
modules/cuo/chief-risk-officer/: README.md
modules/cuo/chief-sales-officer/: README.md
modules/cuo/chief-security-officer/: README.md
modules/cuo/chief-strategy-officer/: README.md
modules/cuo/chief-sustainability-officer/: README.md
modules/cuo/chief-technology-officer/: README.md
modules/cuo/chief-transformation-officer/: README.md
modules/cuo/chief-trust-officer/: README.md
modules/cuo/config/: dream.yaml
modules/cuo/cuo/: __init__.py  api.py  baseline.py  cli.py  description_format_check.py  placeholder_check.py  ship_manifest.py  status_server.py  triage_mcp_module.py  triage_server.py  trigger_tests.py
modules/memory/: AGENTS.md  CHANGELOG.md  INTEROP.md  README.md  audit-profile.yaml  memory.invariants.yaml  memory.schema.json  pyproject.toml  requirements.txt
modules/skill/: .gitignore  ANTHROPIC_GUIDE_DIGEST.md  CHANGELOG.md  FR_111_115_COMPLETION_PLAN.md  MODULE.md  README.md  SKILL_BUNDLE_RUBRIC.md  audit-profile.yaml  pyproject.toml  rust-toolchain.toml
services/: .dockerignore  Cargo.toml  Dockerfile  Makefile  rust-toolchain.toml
services/ai-gateway/: Cargo.toml  README.md
services/auth/: Cargo.toml  README.md  RFC.md
services/brain/: Cargo.toml  README.md
services/chat/: .dockerignore  Cargo.toml  Dockerfile  Makefile  PINNED_COMMIT  README.md
services/chat-legacy-mattermost/: CHANGELOG.cyberos.md  Dockerfile  Makefile  PINNED_COMMIT  README.md  compose.yml
services/dev/: Dockerfile.postgres  README.md  TESTING.md  docker-compose.yml  postgres-init.sql  test-db.sh
services/email/: AGENTS.md  Cargo.toml  Dockerfile  README.md
services/embed-sidecar/: Dockerfile  pyproject.toml
services/eval/: Cargo.toml
services/mcp-gateway/: Cargo.toml  README.md
services/memory/: Cargo.toml  README.md
services/obs-collector/: Cargo.toml  README.md
services/obs-compliance-view/: Cargo.toml
services/obs-proxy/: Cargo.toml
services/obs-router/: Cargo.toml  README.md
services/proj/: AGENTS.md  Cargo.toml  README.md
services/skill-broker/: Cargo.toml  skill.schema.json
skill/: Cargo.toml  README.md  pyproject.toml
skill/docs/: AUDIT.md  CHANGELOG.md  PHASE_5_ACTIVATION.md  PHASE_7_RETIREMENT.md  PUBLISH.md  README.md  SPEC.md
skill/runners/: README.md  __init__.py
skill/toolchain/: .gitignore  package.json
skill/tools/: README.md  package.sh  run_fixtures.py
tools/awh/: README.md  RETIREMENT.md  pyproject.toml
tools/caf/: .gitignore  AGENTS.md  CITATION.cff  LICENSE  NOTICE  README.md  RETIREMENT.md  action.yml  package.json  pyproject.toml
(+12088 files in other folders)
