[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberos-cuo"
version = "0.1.0"
description = "CyberOS CUO router — orchestrate memory + skill modules"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.scripts]
cyberos-cuo = "cuo.__main__:main"

[tool.setuptools.packages.find]
include = ["cuo*"]
