[workspace]
resolver = "2"
members = [
    "brain",
    "auth",
    "shared/cyberos-cli-exit",
    "shared/cyberos-types",
]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
authors = ["CyberSkill Team <eng@cyberskill.world>"]
repository = "https://github.com/cyberskill/cyberos"

[workspace.dependencies]
# Async runtime
tokio       = { version = "1.41", features = ["full"] }
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace", "cors"] }
hyper       = "1.5"

# Postgres + migrations
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Errors + logging
anyhow      = "1"
thiserror   = "2"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# Time + IDs
uuid        = { version = "1.11", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }

# Crypto
sha2        = "0.10"
bcrypt      = "0.16"
jsonwebtoken = "9"

# Test helpers
tokio-test          = "0.4"

# Internal
cyberos-cli-exit    = { path = "shared/cyberos-cli-exit" }
cyberos-types       = { path = "shared/cyberos-types" }

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.test]
opt-level = 1
debug = true
