[workspace]
resolver = "2"
members = [
    "memory",
    "auth",
    "skill-broker",
    "ai-gateway",
    "obs-collector",
    "mcp-gateway",
    "email",
    "proj",
    "shared/cyberos-cli-exit",
    "shared/cyberos-types",
]

[workspace.package]
edition = "2021"
# Versions floored to latest-stable as of 2026 Q2. `cargo update` picks up
# patch releases without touching this manifest.
#
# 2026-05-19 bump 1.83 → 1.88 — webauthn-rs 0.5.5, time 0.3.47, icu_* 2.2.0,
# base64urlsafedata 0.5.5, home 0.5.12 all require rustc ≥ 1.86/1.88 since
# their last patch. The transitive set is wide enough that pinning each via
# `cargo update --precise` is more brittle than bumping the floor.
# `rustup toolchain install 1.88.0` is a one-time operator step.
rust-version = "1.88"
license = "Apache-2.0"
authors = ["CyberSkill Team <eng@cyberskill.world>"]
repository = "https://github.com/cyberskill/cyberos"

[workspace.dependencies]
# Async runtime
tokio       = { version = "1.42", features = ["full"] }
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace", "cors"] }
hyper       = "1.5"

# Postgres + migrations
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "ipnetwork"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Errors + logging
anyhow      = "1"
thiserror   = "2"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# Time + IDs
uuid        = { version = "1.11", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }

# CLI
clap        = { version = "4.5", features = ["derive"] }

# Crypto
sha2        = { version = "0.10", features = ["oid"] }
bcrypt      = "0.16"
jsonwebtoken = "9.3"

# Test helpers
tokio-test          = "0.4"

# Internal
cyberos-cli-exit    = { path = "shared/cyberos-cli-exit" }
cyberos-types       = { path = "shared/cyberos-types" }

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.test]
opt-level = 1
debug = true
