[workspace]
resolver = "2"
members = ["crates/manifest", "crates/host", "crates/resolver", "crates/cli"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
version = "0.1.0"
authors = ["CyberSkill <info@cyberskill.world>"]
license = "Apache-2.0"
repository = "https://github.com/cyberskill-official/cyberos"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
memchr = "2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

# Wasmtime is declared directly in crates/host/Cargo.toml behind the `wasm`
# feature gate (Phase 5). Workspace-level pinning would force the whole
# workspace to fetch wasmtime even on the default (no-wasm) profile.
criterion = { version = "0.5", features = ["html_reports"] }
