[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cyberos-cuo"
version = "0.1.0"
description = "CyberOS CUO supervisor — persona-aware orchestration above SKILL module"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "CyberSkill", email = "info@cyberskill.world" },
]
# Versions floored to latest-stable as of 2026 Q2.
dependencies = [
  "pyyaml>=6.0.2",
  "click>=8.1.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[project.scripts]
cyberos-cuo = "cuo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cuo"]
