[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberos-memory"
version = "0.1.0"
description = "CyberOS memory module — local-first, audit-chained personal memory store"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
cyberos = "cyberos.__main__:main"

[tool.setuptools.packages.find]
include = ["cyberos*"]

[tool.setuptools.package-data]
cyberos = ["data/*.json", "data/*.yaml", "data/*.md"]

[tool.setuptools.dynamic]
dependencies = {file = ["cyberos/requirements.txt"]}
