[package]
name = "cyberos-ai-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS AI Gateway — cost-ledger + provider router + audit-bridge (P0 module)"

# --- Library + binary surface ---
[lib]
name = "cyberos_ai_gateway"
path = "src/lib.rs"

[[bin]]
name = "cyberos-ai"
path = "src/bin/cyberos_ai.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

# --- Dependencies ---
[dependencies]
# Workspace-pinned shared deps
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
sha2.workspace = true

# FR-AI-005 specific
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["rust_decimal", "chrono", "uuid1"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
notify = "6.1"
arc-swap = "1.7"
once_cell = "1.20"

# FR-AI-003 specific (subprocess writer bridge)
hex = "0.4"
unicode-normalization = "0.1"
futures = "0.3"

# Internal
cyberos-types.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3.13"
proptest = "1.5"
rust_decimal_macros = "1.36"
