[package]
name = "cyberos-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AUTH module — tenant + subject + RLS + JWT + MFA (FR-AUTH-001..109)"

[[bin]]
name = "cyberos-auth"
path = "src/main.rs"

[[bin]]
name = "cyberos-auth-bootstrap"
path = "src/bin/bootstrap.rs"

[lib]
name = "cyberos_auth"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
futures-util = "0.3"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
ipnetwork = "0.20"
maxminddb = "0.24"
sha2 = { workspace = true }
linked-hash-map = "0.5"

cyberos-cli-exit.workspace = true
cyberos-types.workspace = true

[dev-dependencies]
tokio-test.workspace = true
