[package]
name = "cyberos-brain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BRAIN module — Layer-2 ingest pipeline + search API (FR-BRAIN-101..111)"

[[bin]]
name = "cyberos-brain"
path = "src/main.rs"

[lib]
name = "cyberos_brain"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
async-trait = "0.1"

cyberos-cli-exit.workspace = true
cyberos-types.workspace = true

[dev-dependencies]
tokio-test.workspace = true
