[package]
name = "cyberos-chat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS-native chat - channels, messages, and live delivery on the CyberOS identity, DB, and audit chain (FR-CHAT-101)"

[lib]
name = "cyberos_chat"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
sqlx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
cyberos-audit-chain = { path = "../shared/cyberos-audit-chain" }
base64 = "0.22"

[[bin]]
name = "cyberos-chat"
path = "src/main.rs"
