[package]
name = "cyberos-email"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EMAIL module — Stalwart adapter + per-tenant DKIM + residency-pinned S3+KMS body storage + memory audit emission (TASK-EMAIL-001 slice 1)"

[lib]
name = "cyberos_email"
path = "src/lib.rs"

[[bin]]
name = "cyberos-email"
path = "src/bin/server.rs"

[[bin]]
name = "cyberos-email-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime + HTTP server
tokio       = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
hyper       = { workspace = true }

# Database
sqlx        = { workspace = true }

# Serde
serde       = { workspace = true }
serde_json  = { workspace = true }

# Errors + logging
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID + time
uuid        = { workspace = true, features = ["v4", "serde"] }
chrono      = { workspace = true, features = ["serde"] }

# Hashing
sha2        = { workspace = true }

# CLI
clap        = { workspace = true, features = ["derive"] }

# Crypto (DKIM keystore at slice-1 ships RSA-2048; Ed25519 deferred per DEC-304)
# `hex` is a transitive of sha2/serde-with so we use sha2's hex output helpers
# rather than pull a separate crate. The hash16-encoder is in audit/email_events.rs.

# Shared CyberOS crates
cyberos-cli-exit   = { workspace = true }
cyberos-types      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
tokio-test = { workspace = true }
