[package]
name = "cyberos-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS EVAL governance core (TASK-EVAL-001 slice 1) - versioned monitoring notice + per-subject acknowledgment gate + data-category/purpose registry + founder/manager-of/self access check + per-category retention, all on the CyberOS identity, Postgres per-tenant RLS, and the memory audit chain. The Phase-0 gate every BRAIN/EVAL capture and evaluation depends on."

[lib]
name = "cyberos_eval"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
# TASK-EVAL-002 rubric: the rubric_item weight / genie_confidence columns are Postgres NUMERIC, decoded via
# sqlx's rust_decimal feature (enabled workspace-wide). The crate is pinned to match services/ai-gateway.
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
# Slice 2 (governance HTTP surface + caller identity): verify the CyberOS RS256
# access token against AUTH's JWKS, exactly as cyberos-chat does. Versions mirror
# services/chat/Cargo.toml so the two services pin the same crates.
jsonwebtoken.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cyberos-audit-chain = { path = "../shared/cyberos-audit-chain" }

[dev-dependencies]
# `util` brings `tower::ServiceExt::oneshot` for driving the router in the
# endpoints integration test, the same way the auth tests do.
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "cyberos-eval"
path = "src/main.rs"

# TASK-EVAL-001 clause 6: the retention/erasure sweeper, OFF by default - it runs ONLY when an operator
# explicitly invokes this binary (or a cron shells out to it). The service binary never sweeps.
[[bin]]
name = "cyberos-eval-sweep"
path = "src/bin/sweep.rs"
