[package]
name = "cyberos-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "memory module — Layer-2 ingest pipeline + search API (FR-MEMORY-101..111)"

[[bin]]
name = "cyberos-memory"
path = "src/main.rs"

[[bin]]
name = "cyberos-memory-admin"
path = "src/bin/admin.rs"

[lib]
name = "cyberos_memory"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
# Versions floored to latest-stable as of 2026 Q2.
async-trait = "0.1.83"
regex = "1.11"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"], default-features = false }

cyberos-cli-exit.workspace = true
cyberos-types.workspace = true
cyberos-obs-sdk.workspace = true

[dev-dependencies]
tokio-test.workspace = true
